--- a/data/about.yaml
+++ b/data/about.yaml
@@ -1,2 +1,3 @@
 content: |
-  I am a seasoned Software Engineer with 5+ years of experience in web, mobile, and desktop development...
+  I am a seasoned Software Engineer with 5+ years of 
+  experience in web, mobile, and desktop development...
