--- a/hugo.yaml
+++ b/hugo.yaml
@@ -86,7 +86,7 @@ params:
   animate: true
 
   theme:
-    disableThemeToggle: true
+    disableThemeToggle: false
     # defaultTheme: "light" # dark
 
   font:
@@ -121,7 +121,7 @@ params:
     # brandLogo: "/logo.png" # Logo for the brand | default is the favicon variable
     # showBrandLogo: false # Show brand logo in nav bar | default is true
     brandName: "<Van_Go/>" # Brand name for the brand | default is the title variable
-    disableSearch: false
+    disableSearch: true
     # searchPlaceholder: "Search"
     stickyNavBar:
       enable: true
@@ -179,7 +179,7 @@ params:
         - "Mantine"
         - "JavaScript"
         - "Express"
-        - "PhP"
+        - "PHP"
         - "Prisma"
         - "MariaDB"
         - "Typescript"
@@ -433,7 +433,7 @@ params:
         #  name: Demo V2
         #   link: https://hugo-profile-2.netlify.app
         badges:
-          - "PhP"
+          - "PHP"
           - "HTML"
           - "Javascript"
           - "CSS"
@@ -515,5 +515,13 @@ params:
     articleList: "Jan 2, 2006"
     articleRecent: "Jan 2, 2006"
 
-  #customScripts: -| # You can add custom scripts which will be added before </body> tag
-  #  <script type="text/javascript"><!-- any script here --></script>
+  customScripts: |
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 800,
+        once: false,
+        offset: 100
+      });
+    </script>
+ 
