--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,76 @@
 {
   "name": "<van_go/>",
-  "short_name": "Van Go Portfolio",
+  "short_name": "Van_Go",
+  "description": "Van Go's professional profile website",
+  "lang": "en",
   "start_url": "/john_hugo/",
+  "scope": "/john_hugo/",
   "display": "standalone",
+  "orientation": "portrait-primary",
+  "theme_color": "#000000",
   "background_color": "#ffffff",
-  "theme_color": "#ffffff",
-  "orientation": "portrait",
+  "categories": ["portfolio", "professional", "personal", "startup", "software", "mobile", "desktop"],
   "icons": [
     {
+      "src": "/john_hugo/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/john_hugo/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/john_hugo/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/john_hugo/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/john_hugo/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
       "src": "/john_hugo/icons/icon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/john_hugo/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
     },
     {
       "src": "/john_hugo/icons/icon-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ]
+  ],
+  "screenshots": [
+    {
+      "src": "/john_hugo/screenshots/desktop-1280x720.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Desktop view of Van_Go's Profile"
+    },
+    {
+      "src": "/john_hugo/screenshots/mobile-375x812.png",
+      "sizes": "375x812",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Mobile view of Van_Go's Profile"
+    }
+  ],
+
+  "prefer_related_applications": false,
+  "edge_side_panel": {
+    "preferred_width": 400
+  }
 }
